--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,12 @@ click==8.2.0
 colorama==0.4.6
 cryptography==42.0.5
 Flask==3.1.0
+Flask-CORS==4.0.0
+Flask-SocketIO==5.3.6
+eventlet==0.35.1
+Flask-Login==0.6.3
 frozenlist==1.4.1
+gunicorn==21.2.0
 idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -36,6 +41,6 @@ urllib3==2.2.2
 user-agents==2.2.0
 Werkzeug==3.1.3
 yarl==1.9.4
-gunicorn==21.2.0
 pymongo==4.7.1
 dnspython==2.6.1
+python-dotenv==1.0.1
